Edited makefile to show all warnings and fixed warning

--- a/Assignment2/makefile
+++ b/Assignment2/makefile
@@ -1,9 +1,9 @@
 all:
-	g++ MST.cpp -o "MST"
-	g++ MST.cpp -o "journey"
+	g++ -Wall MST.cpp -o "MST"
+	g++ -Wall MST.cpp -o "journey"
 
 target1:
-	g++ MST.cpp -o "MST"
+	g++ -Wall MST.cpp -o "MST"
 
 target2:
-	g++ MST.cpp -o "journey"
+	g++ -Wall MST.cpp -o "journey"
